[package]
name = "imghasher"
version = "0.1.0"
authors = ["ZhangZhilin <corex_public@outlook.com>"]
edition = "2018"
description = "A tool developed in Rust to process image hash"

readme = "README.md"
homepage = "https://github.com/zhangzhilinx/imghasher"
repository = "https://github.com/zhangzhilinx/imghasher"
license = "MIT"

keywords = ["cli", "hash", "img-hash", "rename", "generator"]
categories = ["command-line-utilities", "computer-vision"]

exclude = [".idea", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
hex = "0.4.2"
image = ">=0.21"
img_hash = "~3.1"
